# pipi

./: .gitignore  README.md  pyproject.toml
pipi/: __init__.py  agent.py  cli.py  config.py  file_args.py  llm.py  session.py  types.py  view_sessions.py
pipi/tools/: __init__.py  base.py  bash_tool.py  edit_diff.py  edit_tool.py  find_tool.py  grep_tool.py  ls_tool.py  path_utils.py  read_tool.py  truncate.py  write_tool.py
scripts/: view_sessions.py
tests/: test_agent.py  test_cli.py  test_llm.py  test_session.py  test_tools.py
