[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipi"
version = "0.1.0"
description = "A minimal Python coding agent with tool calling and JSONL sessions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Jay" }
]
dependencies = []

[project.scripts]
pipi = "pipi.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipi*"]

[tool.setuptools]
include-package-data = true
